# monAI

./: .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  README.md  pyproject.toml
deploy/: monai.service
src/monai/: __init__.py  config.py  main.py  models.py
src/monai/agents/: api_provisioner.py  asset_aware.py  base.py  browser_learner.py  captcha_solver.py  coder.py  collaboration.py  constraint_planner.py  email_verifier.py  ethics.py  ethics_test.py  executor.py  fact_checker.py  finance_controller.py  finance_expert.py  humanizer.py  identity.py  infrastructure.py  legal.py  llc_provisioner.py  memory.py  name_validator.py  operations.py  orchestrator.py  phone_provisioner.py  playbooks.py  product_iterator.py  product_reviewer.py  proof.py  provisioner.py  self_improve.py  social_presence.py  spawner.py  strategy_runner.py  web_presence.py
src/monai/business/: alerting.py  audit.py  backup.py  bootstrap.py  (+19 more)
tasks/: audit-2026-03-12.md  final-audit-2026-03-12.md  launch-audit-2026-03-12.md  lessons.md  todo.md
tests/: conftest.py  conftest_schema.py  test_alerting.py  test_api_provisioner.py  test_apply_improvements.py  test_asset_aware.py  test_audit.py  test_audit_fixes.py  test_auto_setup.py  test_backup.py  test_backup_config.py  test_bootstrap.py  test_brand_payments.py  test_brand_segmentation.py  test_browser_learner.py  test_btcpay_provider.py  test_captcha_solver.py  test_collaboration.py  test_commercialista.py  test_comms.py  test_config.py  test_content_review_integration.py  test_corporate.py  test_crm.py  test_daemon_state.py  test_dashboard.py  test_dashboard_api.py  test_database.py  test_digital_products_pipeline.py  test_email_marketing.py  test_email_verifier.py  test_eng_team.py  test_ethics.py  test_ethics_enforcement.py  test_exchange_rates.py  test_executor_circuit_breaker.py  test_fact_checker.py  test_finance.py  test_finance_expert.py  test_financial_safety.py  (+57 more)
(+67 files in other folders)
