[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "monai"
version = "0.1.0"
description = "Autonomous money-making AI agent system"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "apscheduler>=3.10.0",
    "aiosmtplib>=3.0.0",
    "aioimaplib>=1.0.0",
    "jinja2>=3.1.0",
    "httpx[socks]>=0.27.0",
    "rich>=13.0.0",
    "pysocks>=1.7.0",
    "Pillow>=10.0.0",
    "stripe>=8.0.0",
    "cryptography>=42.0.0",
    "playwright>=1.40.0",
    "pytest-asyncio>=0.23.0",
]

[project.optional-dependencies]
crypto = ["monero>=1.1.0"]
pdf = ["weasyprint>=60.0"]
all = ["monero>=1.1.0", "weasyprint>=60.0"]
dev = ["pytest>=8.0.0", "pytest-asyncio>=0.23.0", "ruff>=0.3.0"]

[project.scripts]
monai = "monai.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "real_validator: test uses the real NameValidator.generate_and_validate (not mocked)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
